Updates from ShareLaTeX

--- a/main.tex
+++ b/main.tex
@@ -11,8 +11,14 @@
 
 \section{Introduction}
 
-hello does this work ok? what about now? new updates?
+hello does this work ok? \textbf{what} about now? new updates?
 
 Making some changes!
+
+hello world again
+
+Updated in Dropbox]
+
+and again and again
 
 \end{document}
