--- a/main.tex
+++ b/main.tex
@@ -13,12 +13,6 @@
 
 hello does this work ok? \textbf{what} about now? new updates?
 
-Making some changes! Moar changes!
-
-hello world again
-
-Updated in Dropbox]
-
-and again and again
+Updated!
 
 \end{document}
